# featurize-sdwebui

./: README.md  pyproject.toml
apphub/: sdwebui.py  webui-user.sh.tpl
